--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,17 @@
 server.port=8081
 spring.application.name=CUSTOMER-MICROSERVICE
 
-
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/NordeaDB
-spring.datasource.username=postgres
-spring.datasource.password=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres123
+
+
+
+##spring.datasource.url=jdbc:postgresql://localhost:5432/NordeaDB
+##spring.datasource.username=postgres
+##spring.datasource.password=postgres
+##spring.datasource.driverClassName=org.postgresql.Driver
 
 
 spring.jpa.generate-ddl=true
