--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,10 @@
 server.port=8081
-spring.application.name=CUSTOMER-MICROSERVICE
-
-
+spring.application.name=customer-microservice-ecommerce
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/NordeaDB
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
-
 
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
@@ -20,8 +17,11 @@ jwt.claim.sub=assignment
 
 logging.level.root=INFO
 logging.level.com.lti.contollerservice.controller=INFO
-logging.file.name=MyApp.log
-logging.pattern.rolling-file-name=MyApp-%d{yyyy-MM-dd}.%i.log
+logging.file.name=customerservice.log
+logging.logback.rollingpolicy.file-name-pattern=MyApp-%d{yyyy-MM-dd}.%i.log
 
 
-
+##spring.datasource.driverClassName=org.postgresql.Driver
+##spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+##spring.datasource.username=postgres
+##spring.datasource.password=postgres123
