Spring profiles added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
 server.port=8081
 spring.application.name=customer-microservice-ecommerce
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/NordeaDB
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.driverClassName=org.postgresql.Driver
+spring.profiles.active=local
 
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
@@ -14,14 +11,3 @@ spring.jpa.hibernate.ddl-auto=update
 jwt.secretkey=jwtauthorizationkey
 jwt.token.validity=300000
 jwt.claim.sub=assignment
-
-logging.level.root=INFO
-logging.level.com.lti.contollerservice.controller=INFO
-logging.file.name=customerservice.log
-logging.logback.rollingpolicy.file-name-pattern=MyApp-%d{yyyy-MM-dd}.%i.log
-
-
-##spring.datasource.driverClassName=org.postgresql.Driver
-##spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-##spring.datasource.username=postgres
-##spring.datasource.password=postgres123
