--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8081
-spring.application.name=customer-microservice-ecommerce
+spring.application.name=customer-microservice-ecomm
 
-spring.profiles.active=local
+spring.profiles.active=cloud
 
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
