JWT token validity increased

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,6 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 jwt.secretkey=jwtauthorizationkey
-jwt.token.validity=300000
+##JWT Token validity in ms
+jwt.token.validity=1800000
 jwt.claim.sub=assignment
